Closes #91 - Checking des permission depuis les controllers okay !
